css/styles.css
html {
    font-size: 16px;
}
nav {
    background-color: #202225;
    width: 4rem;
    font-family: 'Open Sans', Arial;
}
.icons {
    height: 3rem;
    width: 3rem;
    color: #0D6EFD;
    background-color: #36393F;
}
body {
    /* margin-bottom: 4rem; */
    font-family: 'Source Code Pro', Arial;
    background-color: #36393F;
}
/* Changes background color and text color when hovering, circles change to rounded squares */
.icons:hover {
    background-color: #0A58CA;
    color: white;
    border-radius: 25% !important;
    transition: ease-in-out 200ms;
}
/* Shows helper text when hovering over icons */
.tooltip-nav {
    display: none;
}
.icons:hover .tooltip-nav {
    display: block;
}
.top-nav {
    width: 97vw;
    background-color: #36393F;
    z-index: 1;
}
/* Mobile hamburger nav */
.mobile-navbar {
    width: 100vw;
    margin-left: 4rem;
    background-color: #36393F;
    z-index: 1;
}
/* Main section */
.main-section {
    background-color: #36393F;
    margin-left: 4rem;

}
.flex-container {
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.flex-container-right {
    display: flex;
    align-items: center;
    justify-content: flex-end;
}
.flex-child {
    margin-right: 2rem;
}
.flex-child:hover {
    color: #DCDDDE;
}
.flex-child:hover .right-tooltip-nav {
    display: block;
}
/* Tooltip for the right side */
.right-tooltip-nav {
    margin-right: 2rem;
    display: none;
}
/* Search bar */
.search-bar {
    background-color: #202225;
}
/* Hello section */
.hello-section {
    height: 50vh;
}
.full-stack {
    color: #0D6EFD;
}
/* My projects section */
.preview-image {
    max-width: 33vw;
}
/* My skills section */
/* Icons */
.iconify-container {
    height: 20vh;
}
.iconify-icon-container:hover {
    transform: scale(1.2);
    transform-origin: center;
    transition: ease-in-out 200ms;
}
/* Hover rows change background color */
.hover-rows:hover {
    background-color: #32353B;
}
/* Carousel section */
.carousel-container {
    z-index: 0;
}
/* Contact Section */
.contact-icon {
    color: #0A58CA;
}
/* Message bar */
#message-bar {
    background-color: #40444B;
    caret-color: white;
}
.icon-footer {
    color: #DCDDDE;
}
.iconify-normal {
    height: 100px;
    width: 100px;
}
.row-div {
    background-color: #36393F;
}
.icon-plus {
    left: 0;
}
.smile-icon {
    right: 0;
}
.doc-icon {
    right: 2rem;
}
.film-icon {
    right: 4rem;
}
.gift-icon {
    right: 6rem;
    
}
.message-bar-container {
    padding-left: 5rem;
    padding-right: 5rem;
}
.icon-footer a {
    font-size: 1rem;
}
/* Media query for screens smaller than 370px */
@media only screen and (min-width: 100px) and (max-width: 369px) {
    /* Adjust Body spacing */
    body {
        width: 100vw !important;
        margin-left: -4rem;
    }
    /* Moves hello section down */
    .hello-section {
        margin-top: 8rem;
    }
    /* Remove unessary icons from top nav */
    .remove-icon {
        display: none;
    }
    /* hide side nav */
    .side-nav > * {
        display: none !important;
    }
    .side-nav {
        display: none !important;
    }
    /* Make main section fit the screen */
    .main-section {
        width: 100vw;
    }
    .flex-child {
        margin-right: 0;
    }
    .right-tooltip-nav {
        display: none;
    }
    /* Skills icons */
    .iconify-normal {
        height: 75px;
        width: 75px;
    }
    .iconify-text-normal {
        font-size: 1rem;
    }
    .contact-container {
        margin-top: 25rem;
    }
    /* preview image sizing */
    .preview-image {
        max-width: 95vw;
    }
   /* Hide top nav */
    .top-nav {
        display: none;
    }
    .offcanvas-header, .offcanvas-body {
        background-color: #36393F;
        color: white;
    }
    .message-bar-container {
        padding-left: 1rem;
        padding-right: 1rem;
    }
    .icon-footer input {
        font-size: 0.60rem;
    }
    .film-icon, .doc-icon, .smile-icon, .gift-icon {
        display: none;
    }
}
/* Media query for small screens */
@media only screen and (min-width: 370px) and (max-width: 768px) {
    /* Adjust Body spacing */
    body {
        width: 100vw !important;
        margin-left: -4rem;
    }
    /* Moves hello section down */
    .hello-section {
        margin-top: 4rem;
    }
    /* Remove unessary icons from top nav */
    .remove-icon {
        display: none;
    }
    /* hide side nav */
    .side-nav > * {
        display: none !important;
    }
    .side-nav {
        display: none !important;
    }
    /* Make main section fit the screen */
    .main-section {
        width: 100vw;
    }
    .flex-child {
        margin-right: 0;
    }
    .right-tooltip-nav {
        display: none;
    }
    /* Skills icons */
    .iconify-normal {
        height: 75px;
        width: 75px;
    }
    .iconify-text-normal {
        font-size: 1rem;
    }
    #contact-me {
        margin-top: 14rem;
    }
    /* preview image sizing */
    .preview-image {
        max-width: 95vw;
    }
   /* Hide top nav */
    .top-nav {
        display: none;
    }
    .offcanvas-header, .offcanvas-body {
        background-color: #36393F;
        color: white;
    }
    .message-bar-container {
        padding-left: 2rem;
        padding-right: 2rem;
    }
    .icon-footer input {
        font-size: 0.75rem;
    }
    .film-icon, .doc-icon {
        display: none;
    }
    .smile-icon {
        right: 0;
    }
    .gift-icon {
        right: 1.5rem;
    }
}

/* Media query for medium screens */

/* Media query for 1080p */
@media only screen and (min-width: 769px) and (max-width: 1080px) {
    /* Contact section */
    #contact-me {
        margin-top: 6rem;
    }
    /* Image scaling for project section */
    .preview-image {
        max-width: 90vw;
    }
    /* hide mobile navbar */
    .mobile-navbar {
        display: none;
    }
    .top-nav {
        width: 95vw;
        background-color: #36393F;
        z-index: 1;
    }
}
/* Media query for small phones in landscape */
@media only screen and (orientation: landscape) and (min-width: 300px) and (max-width: 1079px) {
    /* Adjust Body spacing */
    body {
        width: 100vw !important;
        margin-left: -4rem;
    }
    .hello-section {
        margin-top: 8rem;
    }
    .contact-text {
        margin-top: 2rem;
    }
    #contact-me h3 {
        margin-top: 10rem;
    }
    .offcanvas-header, .offcanvas-body {
        background-color: #36393F;
        color: white;
    }
    /* hide side nav */
    .side-nav > * {
        display: none !important;
    }
    .side-nav {
        display: none !important;
    }
    /* Make main section fit the screen */
    .main-section {
        width: 100vw;
    }
}
/* Media query for 1440p */
@media only screen and (min-width: 1081px) and (max-width: 3800px) {
    html {
        font-size: 16px;
    }
    body {
        margin-bottom: 8rem;
    }
    .icons {
        height: 3rem;
        width: 3rem;
        color: #0D6EFD;
        background-color: #36393F;
    }
    /* Changes background color and text color when hovering, circles change to rounded squares */
    .icons:hover {
        background-color: #0A58CA;
        color: white;
        border-radius: 25% !important;
        transition: ease-in-out 200ms;
    }
    /* Shows helper text when hovering over icons */
    .tooltip-nav {
        display: none;
    }
    .icons:hover .tooltip-nav {
        display: block;
    }
    /* Tooltip for the right side */
    .right-tooltip-nav {
        display: none;
    }
    /* Hello section */
    .hello-section {
        height: 50vh;
    }
    /* My projects section */
    .preview-image {
        max-width: 40vw;
    }
    /* My skills section */
    .iconify-large, .iconify-text-large {
        display: none;
    }
    /* Contact Section */
    .contact-icon {
        color: #0A58CA;
    }
    /* hide mobile navbar */
     .mobile-navbar {
        display: none;
    }
    /* Resize footer icons for this screen size */
    .icon-footer a {
        font-size: 1.25rem;
    }
}
/* Media query for 4k+ */
@media only screen and (min-width:3840px) {
    nav {
        width: 10rem;
    }
    .icons {
        height: 8rem;
        width: 8rem;
        color: #0D6EFD;
        background-color: #36393F;
    }
    .icons i {
        font-size: 4em;
    }
    body {
        margin-bottom: 9rem;
    }
    .top-nav {
        width: 95vw;
        margin-left: 6rem;
        padding-top: 2rem;
        font-size: 2rem;
    }
    .top-nav h5 {
        font-size: 3rem;
    }
    /* Intro section */
    .hello-section h1 {
        font-size: 7rem;
    }
    .hello-section h3 {
        font-size: 3.5rem;
    }
    /* My projects header */
    #my-projects h3 {
        font-size: 4rem;
    }
    #my-skills h3 {
        font-size: 4rem;
    }
    #contact-me h3 {
        font-size: 4rem;
    }
    /* Button format */
    .projects-button, .github-button {
        font-size: 3rem;
    }
    /* Description section */
    .description-section {
        font-size: 2rem;
    }
    /* Skills icons */
    .iconify-normal {
        height: 200px;
        width: 200px;
    }
    .iconify-text-normal {
        font-size: 2rem;
    }
    
    /* Form styling */
    .form-label, .form-control, .submit-form {
        font-size: 2rem;
    }
    .footer-icons {
        font-size: 3rem;
    }
    /* PLus icon */
    .icon-plus {
        font-size: 2.25rem;
    }
    /* hide mobile navbar */
    .mobile-navbar {
        display: none;
    }
    /* Fix chat size */
    #chat {
        font-size: 4rem;
        margin-left: 15rem !important;
    }
} 

